; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/fsl-dpaa2/ethsw/extr_ethsw.c_ethsw_unregister_notifier.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/fsl-dpaa2/ethsw/extr_ethsw.c_ethsw_unregister_notifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }
%struct.device = type { i32 }

@port_switchdev_blocking_nb = common dso_local global %struct.notifier_block zeroinitializer, align 4
@.str = private unnamed_addr constant [55 x i8] c"Failed to unregister switchdev blocking notifier (%d)\0A\00", align 1
@port_switchdev_nb = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [46 x i8] c"Failed to unregister switchdev notifier (%d)\0A\00", align 1
@port_nb = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [43 x i8] c"Failed to unregister netdev notifier (%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*)* @ethsw_unregister_notifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ethsw_unregister_notifier(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.notifier_block*, align 8
  %4 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %2, align 8
  store %struct.notifier_block* @port_switchdev_blocking_nb, %struct.notifier_block** %3, align 8
  %5 = load %struct.notifier_block*, %struct.notifier_block** %3, align 8
  %6 = call i32 @unregister_switchdev_blocking_notifier(%struct.notifier_block* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.device*, %struct.device** %2, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @dev_err(%struct.device* %10, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = call i32 @unregister_switchdev_notifier(i32* @port_switchdev_nb)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %13
  %18 = load %struct.device*, %struct.device** %2, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @dev_err(%struct.device* %18, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %17, %13
  %22 = call i32 @unregister_netdevice_notifier(i32* @port_nb)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %21
  %26 = load %struct.device*, %struct.device** %2, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @dev_err(%struct.device* %26, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.2, i64 0, i64 0), i32 %27)
  br label %29

29:                                               ; preds = %25, %21
  ret void
}

declare dso_local i32 @unregister_switchdev_blocking_notifier(%struct.notifier_block*) #1

declare dso_local i32 @dev_err(%struct.device*, i8*, i32) #1

declare dso_local i32 @unregister_switchdev_notifier(i32*) #1

declare dso_local i32 @unregister_netdevice_notifier(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
